Bug 135320 - FILEOPEN PPTX: effect similar to soft edges ("inward soft edges") not shown
Summary: FILEOPEN PPTX: effect similar to soft edges ("inward soft edges") not shown
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2 i...
Keywords: filter:pptx
Depends on:
Blocks: PPTX-3D 146237
  Show dependency treegraph
 
Reported: 2020-07-30 14:53 UTC by Gerald Pfeifer
Modified: 2025-01-04 12:46 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (1.58 MB, application/vnd.ms-powerpoint)
2020-07-30 14:53 UTC, Gerald Pfeifer
Details
Sample slide (PPTX) (1.55 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-07-30 15:16 UTC, Gerald Pfeifer
Details
Comparing 365 (top) with Impress (bottom) (89.34 KB, image/png)
2020-07-30 15:21 UTC, Gerald Pfeifer
Details
Sample slide (PPTX), take 2 (1.55 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-08-03 17:08 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2020-07-30 14:53:27 UTC Comment hidden (obsolete)
Comment 1 Gerald Pfeifer 2020-07-30 15:04:03 UTC Comment hidden (obsolete)
Comment 2 Timur 2020-07-30 15:10:36 UTC Comment hidden (obsolete)
Comment 3 Gerald Pfeifer 2020-07-30 15:16:44 UTC
Created attachment 163786 [details]
Sample slide (PPTX)

This slide shows an effect similar to soft edges, except that it extend
inwards.

Office 365 shows it, Impress does not.

Version: 7.1.0.0.alpha0+
Build ID: <buildversion>
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-07-27_15:39:15
Calc: threaded
Comment 4 Gerald Pfeifer 2020-07-30 15:20:02 UTC Comment hidden (obsolete)
Comment 5 Gerald Pfeifer 2020-07-30 15:21:36 UTC
Created attachment 163787 [details]
Comparing 365 (top) with Impress (bottom)
Comment 6 Xisco Faulí 2020-08-03 15:27:53 UTC
Hello Gerald,
For me, MSO 2010 claims both documents are corrupted. Could you please, reattach it again ?
Comment 7 Gerald Pfeifer 2020-08-03 17:08:05 UTC
Created attachment 163907 [details]
Sample slide (PPTX), take 2

(In reply to Xisco Faulí from comment #6)
> For me, MSO 2010 claims both documents are corrupted. Could you please,
> reattach it again ?

Hi Xisco, I saved that document "163786: Sample slide (PPTX)" from Office 365.

To make sure, I just uploaded that attachment to Office 365, verified it still
exhibits the same behavior as the screenshot shows, and exported it again from
Office 365.

This is what I am thusly attaching.

It is not binary identical, but looks the same as "163786: Sample slide (PPTX)".

Maybe MSO 2010 is too old to process that?


(Is there, by the way, a way you have to hide the original description and first
comment or two of this report? That was a false start on my end.)
Comment 8 Xisco Faulí 2020-08-04 07:30:26 UTC
(In reply to Gerald Pfeifer from comment #7)
> Maybe MSO 2010 is too old to process that?

Ok, that might be the case
> 
> 
> (Is there, by the way, a way you have to hide the original description and
> first
> comment or two of this report? That was a false start on my end.)

Yes, use the tag 'obsolete'
Comment 9 Aron Budea 2020-08-20 14:12:05 UTC
The PPTX samples open fine in PP 2013.

Confirmed with LO 7.1.0.0.alpha0+ (e69fafe1873e4afbe739f21f7a82a069cf7eb5b2), 3.5.0.3 / Windows.
Comment 10 QA Administrators 2023-01-26 03:23:53 UTC Comment hidden (obsolete)
Comment 11 Gerald Pfeifer 2023-01-26 10:17:56 UTC
Still as originally reported:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e125e6623fa1c0f39d927bb37547ca6d1e299cb1
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Comment 12 Commit Notification 2024-12-18 15:28:39 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8b7900dc3dfc6e3284442dc106799c44dc8961de

tdf#135320 sd fix soft edges are not shown on text frames

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 BogdanB 2024-12-18 20:25:41 UTC
Good in
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ffbe93aa93c0300dd4ff5f4d55dfb33e4c7a394d
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded


Bad in (for comparison reason)
Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Thanks, Balazs.
Comment 14 Commit Notification 2024-12-19 12:43:56 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/50131f31f093c32d7f4a3c85fc77637ba0513f2c

tdf#135320 sd fix soft edges are not shown on text frames

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.