tdf#135320 sd fix soft edges are not shown on text frames

Allow soft edge and glow effect on text frames objects.

Change-Id: If08da1cfeae515aa50ded5689b7fe3a963a98cd9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178656
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>